# $Id: Makefile.am,v 1.1.1.1 2006/10/23 09:08:54 aaron Exp $
#

adminrootdir = ${pkgdatadir}/admin-root
adminroot_DATA = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html mt-daapd.css \
	mt-daapd.png config.html index.html required.gif gpl-license.html \
	aspl-license.html thanks.html feedback.html

EXTRA_DIST = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html mt-daapd.css \
	mt-daapd.png config.html index.html required.gif gpl-license.html \
	aspl-license.html thanks.html feedback.html